# adrea-immo-pipeline

./: .gitignore  README.md  pyproject.toml
etl/: ban_client.py  enrichissement.py  pipeline_etl.py  profiling.py  transform.py
eval/: mesure_apres.py  mesure_avant.py  t15_dedup_inter_sources.py  transformations_v2.py
tests/: test_ban_client.py  test_transform.py
