[project]
name = "adrea-immo-pipeline"
version = "0.1.0"
description = "Pipeline ETL/ELT de normalisation des adresses postales - ImmoPro France SAS"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "duckdb>=0.10",
    "rapidfuzz>=3.6",
    "httpx>=0.27",
    "great-expectations>=0.18",
    "unidecode>=1.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]